# point3d-interp

./: .clang-format  .clang-tidy  .clangd  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  development_plan.md  format.sh  test_extrapolation.cpp
.cache/clangd/index/: api.cpp.0000BB0A5CE59D99.idx  api.h.531FEF232A093E75.idx  basic_usage.cpp.3CC8E08B717F3741.idx  cpu_interpolator.cpp.7E2FF99A0183B1B3.idx  cpu_interpolator.h.A35CC325E817E99D.idx  cuda_interpolator.cu.937D3B565B8619DA.idx  data_loader.cpp.19E8D777A7EC4F19.idx  data_loader.h.9BBF31EA4DED5B57.idx  error_codes.cpp.E57862E3CFA0287C.idx  error_codes.h.7FCC3F1E4E60FA28.idx  grid_structure.cpp.8173A84DD05EAE8C.idx  grid_structure.h.5BD7DFE42B9B41BB.idx  memory_manager.cu.F5BB32766D4C115B.idx  types.h.9210F2F4F55C33EA.idx
data/: sample_magnetic_field.csv
docs/: API_Reference.md  Build_Guide.md  Code_Review_Issues.md  Performance_Guide.md
examples/: CMakeLists.txt  basic_usage.cpp  cuda_kernel_direct.cu  time_profile.cpp  time_profile.cu
include/point3d_interp/: api.h  constants.h  cpu_interpolator.h  data_loader.h  error_codes.h  exporter.h  grid_structure.h  hermite_mls_interpolator.h  interpolator_adapters.h  interpolator_api.h  interpolator_exporter.h  interpolator_factory.h  interpolator_interface.h  kd_tree.h  memory_manager.h  spatial_grid.h  types.h  unstructured_interpolator.h
plans/: hmls_architecture_diagram.md  hmls_implementation_plan.md
src/: api.cpp  api.cu  cpu_interpolator.cpp  cuda_hermite_mls_interpolator.cu  cuda_interpolator.cu  data_loader.cpp  error_codes.cpp  exporter.cpp  grid_structure.cpp  hermite_mls_interpolator.cpp  interpolator_adapters.cpp  interpolator_adapters.cu  interpolator_api.cu  interpolator_exporter.cpp  interpolator_factory.cpp  interpolator_factory.cu  kd_tree.cpp  memory_manager.cu  spatial_grid.cpp  unstructured_interpolator.cpp
tests/: CMakeLists.txt  benchmark.cpp  benchmark_10x10x10.cpp  benchmark_20x20x20.cpp  benchmark_30x30x30.cpp  benchmark_50x50x50.cpp  benchmark_base.h  benchmark_data_loading.cpp  benchmark_hmls_inside_domain_1000.cpp  benchmark_hmls_inside_domain_125000.cpp  benchmark_hmls_inside_domain_27000.cpp  benchmark_hmls_inside_domain_8000.cpp  benchmark_inside_domain_10x10x10.cpp  benchmark_inside_domain_20x20x20.cpp  benchmark_inside_domain_30x30x30.cpp  benchmark_inside_domain_50x50x50.cpp  benchmark_memory.cpp  benchmark_out_of_domain_10x10x10.cpp  benchmark_out_of_domain_20x20x20.cpp  benchmark_out_of_domain_30x30x30.cpp  benchmark_out_of_domain_50x50x50.cpp  benchmark_outside_domain_10x10x10.cpp  benchmark_outside_domain_20x20x20.cpp  benchmark_outside_domain_30x30x30.cpp  benchmark_outside_domain_50x50x50.cpp  benchmark_structured_base.h  benchmark_structured_inside_domain_1000.cpp  benchmark_structured_inside_domain_125000.cpp  benchmark_structured_inside_domain_27000.cpp  benchmark_structured_inside_domain_8000.cpp  benchmark_structured_outside_domain_1000.cpp  benchmark_structured_outside_domain_125000.cpp  benchmark_structured_outside_domain_27000.cpp  benchmark_structured_outside_domain_8000.cpp  benchmark_unstructured_base.h  benchmark_unstructured_inside_domain_1000.cpp  benchmark_unstructured_inside_domain_125000.cpp  benchmark_unstructured_inside_domain_27000.cpp  benchmark_unstructured_inside_domain_8000.cpp  benchmark_unstructured_outside_domain_1000.cpp  (+15 more)
